--- a/Installer/main.wxs
+++ b/Installer/main.wxs
@@ -40,12 +40,12 @@
         <Directory Id='CompanyDir' Name='MySQL'>
           <Directory Id="INSTALLDIR" Name="$(var.ProductName)">
             <Component Id='MainItems' Guid='2395C79F-4F2E-415F-9667-76CBE129D4CE'>
-              <File Id="Manifest" Name="MySQL.ExcelAddIn.dll.manifest" Source="..\Source\bin\release\MySQL.ExcelAddIn.dll.manifest" />
+              <File Id="Manifest" Name="MySQL.ForExcel.dll.manifest" Source="..\Source\bin\release\MySQL.ForExcel.dll.manifest" />
               <File Id="MySql.Utility" Name="MySQL.Utility.dll" Source="..\Source\bin\release\mysql.utility.dll" />
               <File Id="MySql.Data" Name="MySql.Data.dll" Source="..\Source\bin\release\mysql.data.dll" />
               <File Id="v40Utilities" Name="Microsoft.Office.Tools.Common.v4.0.Utilities.dll" Source="..\Source\bin\release\Microsoft.Office.Tools.Common.v4.0.Utilities.dll" />
-              <File Id="VSTOFile" Name="MySQL.ExcelAddIn.vsto" Source="..\Source\bin\release\MySQL.ExcelAddIn.vsto" />
-              <File Id="AddIn" Name="MySQL.ExcelAddIn.dll" KeyPath="yes" Source="..\Source\bin\release\MySQL.ExcelAddIn.dll" />
+              <File Id="VSTOFile" Name="MySQL.ForExcel.vsto" Source="..\Source\bin\release\MySQL.ForExcel.vsto" />
+              <File Id="AddIn" Name="MySQL.ForExcel.dll" KeyPath="yes" Source="..\Source\bin\release\MySQL.ForExcel.dll" />
 
               <!--<File Id="_3259BD5CB475A992801BA08E894505C9" Name="Microsoft.VisualBasic.PowerPacks.Vs.dll" Source="SourceDir\File\_3259BD5CB475A992801BA08E894505C9" />
               <File Id="_F7FD2352BC6C3C2046F6B91527C61742" Name="Microsoft.VisualStudio.Tools.Applications.Runtime.dll" Assembly=".net" AssemblyManifest="_F7FD2352BC6C3C2046F6B91527C61742" AssemblyApplication="_F7FD2352BC6C3C2046F6B91527C61742" DiskId="1" Source="SourceDir\File\_F7FD2352BC6C3C2046F6B91527C61742" />-->
