Fix to correctly removed Registry entries that did a bug when removing the excel addin. Also added the application icon to used in some Application properties.

--- a/Installer/main.wxs
+++ b/Installer/main.wxs
@@ -5,7 +5,7 @@
 
   <Product Name="$(var.ProductName)" Id ="17E3FD69-D9E7-45E3-8C57-67BB34F0CCF6" Manufacturer="Oracle" Language="1033" Version="1.0" 
            UpgradeCode="30162E4E-2EED-48D1-BBC0-8D4A517DB004">
-		<Package Id="*" InstallerVersion="200" Compressed="yes" InstallScope="perMachine" InstallPrivileges="elevated"/>
+    <Package Id="*" InstallerVersion="200" Compressed="yes" InstallScope="perMachine" InstallPrivileges="elevated"/>
 
     <Upgrade Id="3106FB9F-1793-4A0D-BEBB-742952D69CDB">
       <UpgradeVersion OnlyDetect="yes" Minimum="$(var.Version)" Property="NEWERVERSIONDETECTED" IncludeMinimum="no" />
@@ -13,7 +13,8 @@
     </Upgrade>    
     
     <Property Id="ARPURLINFOABOUT" Value="http://www.mysql.com" />
-    <Property Id="ARPURLUPDATEINFO" Value="http://dev.mysql.com"/>    
+    <Property Id="ARPURLUPDATEINFO" Value="http://dev.mysql.com"/>
+    <Property Id="ARPPRODUCTICON" Value="MySQL.ForExcel.ico" />
 
     <Media Id="1" Cabinet="MySQLForExcel.cab" EmbedCab="yes"  CompressionLevel="high"/>
 
@@ -28,15 +29,8 @@
     <Condition Message="The Microsoft Visual Studio Tools for Office Runtime must be installed prior to running this installation.">
       <![CDATA[Installed OR VSTOINSTALLED]]>
     </Condition>
-
-    <!-- See if Office is installed -->
-    <!--<Property Id="OFFICE14INSTALLED">
-      <RegistrySearch Id="RegOffice14Search" Root="HKCU" Key="Software\Microsoft\Office\14.0\Excel" Name="ExcelName" Type="raw"/>
-    </Property>
-    <Condition Message="Microsoft Office must be installed prior to running this installation.">
-      <![CDATA[Installed OR OFFICE14INSTALLED]]>
-    </Condition>-->
-
+    
+    
     <!-- First make sure that .NET is installed -->
     <PropertyRef Id="NETFRAMEWORK40CLIENT"/>
     <PropertyRef Id="NETFRAMEWORK40FULL"/>
@@ -54,13 +48,10 @@
               <File Id="MySql.Data" Name="MySql.Data.dll" Source="..\Source\bin\release\mysql.data.dll" />
               <File Id="v40Utilities" Name="Microsoft.Office.Tools.Common.v4.0.Utilities.dll" Source="..\Source\bin\release\Microsoft.Office.Tools.Common.v4.0.Utilities.dll" />
               <File Id="VSTOFile" Name="MySQL.ForExcel.vsto" Source="..\Source\bin\release\MySQL.ForExcel.vsto" />
-              <File Id="AddIn" Name="MySQL.ForExcel.dll" KeyPath="yes" Source="..\Source\bin\release\MySQL.ForExcel.dll" />
-
-              <!--<File Id="_3259BD5CB475A992801BA08E894505C9" Name="Microsoft.VisualBasic.PowerPacks.Vs.dll" Source="SourceDir\File\_3259BD5CB475A992801BA08E894505C9" />
-              <File Id="_F7FD2352BC6C3C2046F6B91527C61742" Name="Microsoft.VisualStudio.Tools.Applications.Runtime.dll" Assembly=".net" AssemblyManifest="_F7FD2352BC6C3C2046F6B91527C61742" AssemblyApplication="_F7FD2352BC6C3C2046F6B91527C61742" DiskId="1" Source="SourceDir\File\_F7FD2352BC6C3C2046F6B91527C61742" />-->
+              <File Id="AddIn" Name="MySQL.ForExcel.dll" KeyPath="yes" Source="..\Source\bin\release\MySQL.ForExcel.dll" />              
               <RemoveFolder Id="INSTALLDIR" On="uninstall" />
             </Component>
-            <Component Id="RegistryItems" Guid="">
+            <Component Id="RegistryItems" Guid="*">
               <RegistryKey Id="Addin" Root="HKCU" Action="createAndRemoveOnUninstall"
                            Key="SOFTWARE\Microsoft\Office\Excel\Addins\MySQL.ForExcel">
                 <RegistryValue Id="IdDescription" Name="Description" Value="MySQL.ForExcel" Type="string"/>
@@ -74,58 +65,21 @@
       </Directory>
     </Directory>
 
-      <!--<Directory Id="ProgramMenuFolder" Name="PMFolder">
-        <Directory Id='PMCompanyDir' Name='MySQL'>
-          <Directory Id="ShortCutDir" Name="$(var.ProductName)"/>
-        </Directory>
-      </Directory>-->
-
-      <!--<Directory Id="DesktopFolder"  Name="Desktop">
-        <Component Id="DesktopShortcut" Guid="1e9fb57a-62e3-45cf-a896-686e33407608">
-          <RegistryKey Root="HKCU" Key="MySQL AB\MySQLTrayApp" Action="createAndRemoveOnUninstall">
-            <RegistryValue Name="MySQLTrayAppShortCut" Value="1" Type="integer" KeyPath="yes"/>
-          </RegistryKey>
-          <Shortcut Id="DesktopShortcut" Directory="DesktopFolder" Name="MySQL Tray Application" ShortName="MySQLTAP" Icon="Icon.exe" Target="[INSTALLDIR]MySQL.TrayApp.exe" Show="normal" WorkingDirectory="INSTALLDIR">
-            <Icon Id="Icon.exe" SourceFile="..\Source\bin\Release\MySQL.TrayApp.exe" />
-          </Shortcut>
-        </Component>
-      </Directory>-->
-    
-    
-    <!--<DirectoryRef Id="ShortCutDir">
-      <Component Id="ProgramMenuShortcutsComponent" Guid="1e9fb57a-62e3-45cf-a896-686e33407610">
-        <CreateFolder Directory="PMCompanyDir" />
-        <CreateFolder Directory="ShortCutDir" />
-        <RemoveFolder Id="RemovePMCompanyDir" Directory="PMCompanyDir" On="uninstall" />        
-        <RemoveFolder Id="RemoveShortCutDir"  Directory="ShortCutDir" On="uninstall"/>
-        <Shortcut Id="ApplicationStartMenuShortcut" Name="$(var.ProductName)"   Description="MySQL Tray Application"  Target="[INSTALLDIR]MySQL.TrayApp.exe"  WorkingDirectory="INSTALLDIR"/>       
-        <RegistryValue Root="HKCU" Key="Software\MySQL AB\[ProductName]" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-        <RegistryValue Root="HKCU" Key="Software\MySQL AB\[ProductName]" Name="location" Type="string" Value="[INSTALLDIR]"/>
-      </Component>
-    </DirectoryRef>-->
-
     <Feature Id="DefaultFeature" ConfigurableDirectory="INSTALLDIR" Level="1" >
       <ComponentRef Id="MainItems" />
       <ComponentRef Id="RegistryItems"/>
     </Feature>
-
-
-    <!--<Feature Id="Complete" Level="1">		
-			<ComponentRef Id="MainExecutable" />
-      --><!--<ComponentRef Id="DesktopShortcut" />--><!--
-      <ComponentRef Id="ProgramMenuShortcutsComponent"/>
-    </Feature>-->
 
     <InstallExecuteSequence>
       <RemoveExistingProducts After="InstallInitialize" />
     </InstallExecuteSequence>
 
 
-      <Property Id="WIXUI_INSTALLDIR" Value="INSTALLDIR" />
+    <Property Id="WIXUI_INSTALLDIR" Value="INSTALLDIR" />
     <UIRef Id="WixUI_MySQL" />
     <WixVariable Id="WixUIBannerBmp" Value="Bitmaps/BannrBmp.bmp"/>
     <WixVariable Id="WixUIDialogBmp" Value="Bitmaps/DlgBmp.bmp"/>
-    <!--<Icon Id="TraApp.ico" SourceFile="app_default.ico" />-->
+    <Icon Id="MySQL.ForExcel.ico" SourceFile="mysql-for-excel.ico" />
 
   </Product>
 </Wix>
