--- a/Installer/main.wxs
+++ b/Installer/main.wxs
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?define ProductName="MySQL For Excel $(var.Version)"?>
-<?define Version="1.0"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
 
   <Product Name="$(var.ProductName)" Id ="*" Manufacturer="Oracle" Language="1033" Version="$(var.Version)" 
@@ -71,7 +70,7 @@
       </Directory>
     </Directory>
 
-    <Feature Id="DefaultFeature" ConfigurableDirectory="INSTALLDIR" Level="1" >
+    <Feature Id="DefaultFeature" Title="MySQLForExcel" ConfigurableDirectory="INSTALLDIR" Level="1" >
       <ComponentRef Id="MainItems" />
       <ComponentRef Id="RegistryItems"/>
     </Feature>
