--- a/Installer/main.wxs
+++ b/Installer/main.wxs
@@ -48,11 +48,13 @@
               <File Id="v40Utilities" Name="Microsoft.Office.Tools.Common.v4.0.Utilities.dll" Source="..\Source\bin\release\Microsoft.Office.Tools.Common.v4.0.Utilities.dll" />
               <File Id="VSTOFile" Name="MySQL.ForExcel.vsto" Source="..\Source\bin\release\MySQL.ForExcel.vsto" />
               <File Id="AddIn" Name="MySQL.ForExcel.dll" KeyPath="yes" Source="..\Source\bin\release\MySQL.ForExcel.dll" />
+              <File Id='ReleaseNotes' Name='Release Notes.txt' Source='Release Notes.txt'/>
               <?if $(var.IsGPL) = 1?>
               <File Id='ReadMe' Name='README' Source='README'/>
               <File Id="COPYING" Name="COPYING" Source="COPYING" DiskId="1" />
               <?else?>
               <File Id="README2" Name="README" Source="README-Commercial" DiskId="1"/>
+              <File Id="LICENSE" Name="LICENSE" Source="LICENSE" DiskId="1" />
               <?endif?>
               <RemoveFolder Id="INSTALLDIR" On="uninstall" />
             </Component>
