- Updated the CHANGES file to include the fixed MySQL bugs along with Oracle bugs. (CHANGES) - Removed the README-Commercial file from the Setup.wixproj since it must be included only in the SetupCommercial.wixproj. (Installer/Setup.wixproj) - Fixed WIX code to upgrade an older version automatically if the version is < current installed version, the bug was the comparison being made was <=. (Installer/main.wxs) - Fixed the inclusion of all binary files needed to run the Excel add-in if the installation is a PackageNoInstallGPL or PackageNoInstallCommercial, the bug was that not all needed files were included. (Package.csproj)

--- a/Installer/main.wxs
+++ b/Installer/main.wxs
@@ -8,7 +8,7 @@
 
     <Upgrade Id="30162E4E-2EED-48D1-BBC0-8D4A517DB004">
       <UpgradeVersion OnlyDetect="yes" Minimum="$(var.Version)" Property="NEWERVERSIONDETECTED" IncludeMinimum="no" />
-      <UpgradeVersion OnlyDetect="no" Maximum="$(var.Version)" Property="OLDERVERSIONBEINGUPGRADED" IncludeMaximum="yes" />
+      <UpgradeVersion OnlyDetect="no" Maximum="$(var.Version)" Property="OLDERVERSIONBEINGUPGRADED" IncludeMaximum="no" />
     </Upgrade>
 
     <!-- Do not install if a newer version is already installed. -->
