--- a/Installer/main.wxs
+++ b/Installer/main.wxs
@@ -87,11 +87,11 @@
 
     <Binary Id="ExcelCustomAction" SourceFile="ExcelCustomAction.CA.dll" />
     <CustomAction Id="InstallAddIn32.SetProperty" Return="check" Property="InstallAddIn32" Value="AddInDllLocation=[#AddIn];VstoFileLocation=[#VSTOFile]"/>
-    <CustomAction Id="InstallAddIn32" BinaryKey="ExcelCustomAction" DllEntry="InstallAddIn32" Execute="deferred" />
+    <CustomAction Id="InstallAddIn32" BinaryKey="ExcelCustomAction" DllEntry="InstallAddIn32" Execute="deferred" Impersonate="no" />
     <CustomAction Id="InstallAddIn64.SetProperty" Return="check" Property="InstallAddIn64" Value="AddInDllLocation=[#AddIn];VstoFileLocation=[#VSTOFile]"/>
-    <CustomAction Id="InstallAddIn64" BinaryKey="ExcelCustomAction" DllEntry="InstallAddIn64" Execute="deferred" />
-    <CustomAction Id="RemoveAddIn32" BinaryKey="ExcelCustomAction" DllEntry="RemoveAddIn32" />
-    <CustomAction Id="RemoveAddIn64" BinaryKey="ExcelCustomAction" DllEntry="RemoveAddIn64" />
+    <CustomAction Id="InstallAddIn64" BinaryKey="ExcelCustomAction" DllEntry="InstallAddIn64" Execute="deferred" Impersonate="no" />
+    <CustomAction Id="RemoveAddIn32" BinaryKey="ExcelCustomAction" DllEntry="RemoveAddIn32" Impersonate="no" />
+    <CustomAction Id="RemoveAddIn64" BinaryKey="ExcelCustomAction" DllEntry="RemoveAddIn64" Impersonate="no" />
 
     <InstallExecuteSequence>
       <RemoveExistingProducts After="InstallInitialize" />
