Work Item #737 - uninstalling excel addin does not work
- Added the Execute="deferred" attribute to the RemoveAddIn32 and RemoveAddIn64 custom actions because the lack of it was causing a problem with the impersonation (or actually the non-impersonation set by the Impersonate="no" attribute) needed to access registry keys during the uninstallation of the product.  This behavior was only seen if the uninstallation was not run from an elevated process and the elevation was done on the fly. (Installer/main.wxs)

--- a/Installer/main.wxs
+++ b/Installer/main.wxs
@@ -90,8 +90,8 @@
     <CustomAction Id="InstallAddIn32" BinaryKey="ExcelCustomAction" DllEntry="InstallAddIn32" Execute="deferred" Impersonate="no" />
     <CustomAction Id="InstallAddIn64.SetProperty" Return="check" Property="InstallAddIn64" Value="AddInDllLocation=[#AddIn];VstoFileLocation=[#VSTOFile]"/>
     <CustomAction Id="InstallAddIn64" BinaryKey="ExcelCustomAction" DllEntry="InstallAddIn64" Execute="deferred" Impersonate="no" />
-    <CustomAction Id="RemoveAddIn32" BinaryKey="ExcelCustomAction" DllEntry="RemoveAddIn32" Impersonate="no" />
-    <CustomAction Id="RemoveAddIn64" BinaryKey="ExcelCustomAction" DllEntry="RemoveAddIn64" Impersonate="no" />
+    <CustomAction Id="RemoveAddIn32" BinaryKey="ExcelCustomAction" DllEntry="RemoveAddIn32" Execute="deferred" Impersonate="no" />
+    <CustomAction Id="RemoveAddIn64" BinaryKey="ExcelCustomAction" DllEntry="RemoveAddIn64" Execute="deferred" Impersonate="no" />
 
     <InstallExecuteSequence>
       <RemoveExistingProducts After="InstallInitialize" />
