Work Item #927 - GNU General Public Licence file appears in the commercial version
- Split the building of the Installer files into 2 (1 for GPL and 1 for Commercial) since the definition of the IsGPL constant that copied conditionally the licensing files always remained with the value set by the first compiled project so the second project always ended up with the same value set by the first compiled project. (Installer/Setup.wixproj, Installer/SetupCommercial.wixproj, Installer/main.wxs, Package.csproj, Package.sln)

--- a/Installer/main.wxs
+++ b/Installer/main.wxs
@@ -58,7 +58,7 @@
               <File Id="VSTOFile" Name="MySQL.ForExcel.vsto" Source="..\Source\bin\release\MySQL.ForExcel.vsto" />
               <File Id="AddIn" Name="MySQL.ForExcel.dll" KeyPath="yes" Source="..\Source\bin\release\MySQL.ForExcel.dll" />
               <File Id='ReleaseNotes' Name='Release Notes.txt' Source='Release Notes.txt'/>
-              <?if $(var.IsGPL) = 1?>
+              <?if $(var.IsGPL) = true ?>
               <File Id='ReadMe' Name='README' Source='README'/>
               <File Id="COPYING" Name="COPYING" Source="COPYING" DiskId="1" />
               <?else?>
