Bug #18354533 - MYSQL FOR EXCELL ADDIN 1.2.0 (STAND ALONE) IS NOT ABLE TO UPDATE AN OLD VERSION
- Fixed code in custom action DLL project to check for null values for title and description attributes after getting them, and to check if the Registry key for MySQL for Excel exists before attempting to add it. (ExcelCustomAction/CustomAction.cs, ExcelCustomAction/Exceptions.cs. ExcelCustomAction.CA.dll)
- Fixed custom actions that install and remove the Registry keys for MySQL for Excel since the condition was wrong and was attempting to add the keys on a product update (when the keys were already added on a first install). Now the keys are added just on a first install and removed when the product is fully uninstalled. (Installer/main.wxs)

--- a/Installer/main.wxs
+++ b/Installer/main.wxs
@@ -99,25 +99,13 @@
     <InstallExecuteSequence>
       <RemoveExistingProducts After="InstallInitialize" />
 
-      <Custom Action="InstallAddIn32.SetProperty" Before="InstallAddIn32">
-        <![CDATA[NOT(REMOVE="ALL" AND NOT UPGRADINGPRODUCTCODE)]]>
-      </Custom>
-      <Custom Action="InstallAddIn32" Before="InstallFinalize">
-        <![CDATA[NOT(REMOVE="ALL" AND NOT UPGRADINGPRODUCTCODE)]]>
-      </Custom>
-      <Custom Action="InstallAddIn64.SetProperty" Before="InstallAddIn64">
-        <![CDATA[VersionNT64 AND NOT(REMOVE="ALL" AND NOT UPGRADINGPRODUCTCODE)]]>
-      </Custom>
-      <Custom Action="InstallAddIn64" After="InstallAddIn32">
-        <![CDATA[VersionNT64 AND NOT(REMOVE="ALL" AND NOT UPGRADINGPRODUCTCODE)]]>
-      </Custom>
+      <Custom Action="InstallAddIn32.SetProperty" Before="InstallAddIn32">NOT Installed AND NOT UPGRADINGPRODUCTCODE</Custom>
+      <Custom Action="InstallAddIn32" Before="InstallFinalize">NOT Installed AND NOT UPGRADINGPRODUCTCODE</Custom>
+      <Custom Action="InstallAddIn64.SetProperty" Before="InstallAddIn64">VersionNT64 AND NOT Installed AND NOT UPGRADINGPRODUCTCODE</Custom>
+      <Custom Action="InstallAddIn64" After="InstallAddIn32">VersionNT64 AND NOT Installed AND NOT UPGRADINGPRODUCTCODE</Custom>
 
-      <Custom Action="RemoveAddIn32" Before="InstallFinalize">
-        <![CDATA[REMOVE="ALL" AND NOT UPGRADINGPRODUCTCODE]]>
-      </Custom>
-      <Custom Action="RemoveAddIn64" After="RemoveAddIn32">
-        <![CDATA[VersionNT64 AND REMOVE="ALL" AND NOT UPGRADINGPRODUCTCODE]]>
-      </Custom>
+      <Custom Action="RemoveAddIn32" Before="InstallFinalize">REMOVE="ALL" AND NOT UPGRADINGPRODUCTCODE</Custom>
+      <Custom Action="RemoveAddIn64" After="RemoveAddIn32">VersionNT64 AND REMOVE="ALL" AND NOT UPGRADINGPRODUCTCODE</Custom>
     </InstallExecuteSequence>
 
     <Property Id="WIXUI_INSTALLDIR" Value="INSTALLDIR" />
